# ImageProcessing

./: CMakeLists.txt  GroupProject-ReportTemplate.docx  ImageFilters  LICENSE  README.md  Running times.xlsx  TodoList.txt  reference.md
.github/workflows/: cmake-single-platform.yml
src/: BrightnessFilter.cpp  BrightnessFilter.h  ColourFilterCorrection.cpp  ColourFilterCorrection.h  EdgeDetectionFilter.cpp  Filter.h  FilterInputHandler.cpp  GrayScaleFilter.cpp  GrayscaleFilter.h  Image.cpp  ImageBlurFilter.cpp  ImageBlurFilter.h  ProjectionInputHandler.cpp  Projections.cpp  SliceInputHandler.cpp  SobelFilter.cpp  SobelFilter.h  Volume.cpp  a.out  main.cpp  minimal.cpp  run
src/doc/html/: _filter3_d_8h_source.html  (+37 more)
src/new/: ColorConversion.cpp  ColorConversion.h  ColourFilterCorrection.cpp  ColourFilterCorrection.h  Doxyfile  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  Filter3D.cpp  Filter3D.h  FilterInputHandler.cpp  FilterInputHandler.h  FilterInputHandler3D.cpp  FilterInputHandler3D.h  Image.cpp  Image.h  ImageBlurFilter.cpp  ImageBlurFilter.h  ProjectionInputHandler.cpp  ProjectionInputHandler.h  Projections.cpp  Projections.h  Slice.cpp  Slice.h  SliceInputHandler.cpp  SliceInputHandler.h  Utils.h  Volume.cpp  Volume.h  a.out  main.cpp  minimal.cpp  runeverything.h
src/old/: BlurFilter.cpp  BrightnessFilter.cpp  BrightnessFilter.h  Filter.cpp  GrayScaleFilter.cpp  GrayscaleFilter.h  SobelFilter.cpp  SobelFilter.h
test/: Test3D.cpp  Test3D.h  a.out  main.cpp  test  test.cpp  test.h  test2D.cpp  test2D.h
test2D/: main.cpp  test  test.cpp  test.h
(+148 files in other folders)
